--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -24,4 +24,25 @@
         </div>
     {% endfor %}
 </div>
+
+<div class="test">
+    	{% if products.count != 0 %}
+	<div class="d-flex justify-content-center">
+		<div class="pagination">
+			<span class="step-links">
+        {% if products.has_previous %}
+            <a href="?page={{ products.previous_page_number }}" class="btn btn-star-trek no-margin">Previous</a>
+        {% endif %}
+        <span class="current">
+            Page {{ products.number }} of {{ products.paginator.num_pages }}
+        </span>
+			{% if products.has_next %}
+			<a href="?page={{ products.next_page_number }}" class="btn btn-star-trek no-margin">Next</a>
+			{% endif %}
+			</span>
+		</div>
+	</div>
+	{% endif %}
+</div>
+
 {% endblock %}
