--- a/static/css/custom_copy.css
+++ b/static/css/custom_copy.css
@@ -1,6 +1,8 @@
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    font-family: Arial;
+    /* padding-top: 100px; */
+    background-color: black;
+    color: black;
 }
 
 footer {
