--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,6 +11,17 @@ footer {
     color: #A9A9A9;
 }
 
+
+.card-footer {
+    background-color: white;
+    border-color: white;
+    position:absolute;
+    bottom:10px;
+    /* margin-left: 25%;
+    margin-bottom: 10px; */
+}
+
+
 .icon-bar {
     background-color: #fff;
 }
@@ -281,3 +292,6 @@ a.article, a.article:hover {
     }
 
 }
+
+
+/* Product card testing  */
