--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CycleOlogy</title>
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
@@ -192,6 +193,28 @@
 
             <h2>Maybe put somthing in here</h2>
             <p>this is a holder</p>
+
+
+            	<div class="d-flex justify-content-center">
+		<div class="products-filters row">
+			<div class="col-6 offset-sm-1 col-sm-2 d-flex justify-content-center no-padding">
+				<a href="{% url 'assessory_products' %}" class="btn btn-products-filter">Accessories</a>
+			</div>
+			<div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
+				<a href="{% url 'components_products' %}" class="btn btn-products-filter">Components</a>
+			</div>
+			<div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
+				<a href="{% url 'nutrition_products' %}" class="btn btn-products-filter">Nutrition</a>
+			</div>
+			<div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
+				<a href="{% url 'workshop_products' %}" class="btn btn-products-filter">Workshop</a>
+			</div>
+			<div class="col-12 col-sm-2 d-flex justify-content-center no-padding">
+				<a href="{% url 'clearance_products' %}" class="btn btn-products-filter">Clearance</a>
+			</div>
+		</div>
+	</div>
+
   
 
 {% if messages %}
