--- a/templates/base.html
+++ b/templates/base.html
@@ -190,47 +190,41 @@
                     </div>
                 </div>
             </nav>
-
-            <h2>Maybe put somthing in here</h2>
-            <p>this is a holder</p>
-
-
+            <div class="container">
+            {% if messages %}
+                <div class="alert alert-success">
+                    <div class="messages">
+                        {% for message in messages %} {{ message }} {% endfor %}
+                    </div>
+                    </div>
+            {% endif %}
             	<div class="d-flex justify-content-center">
-		<div class="products-filters row">
-			<div class="col-6 offset-sm-1 col-sm-2 d-flex justify-content-center no-padding">
-				<a href="{% url 'assessory_products' %}" class="btn btn-products-filter">Accessories</a>
-			</div>
-			<div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
-				<a href="{% url 'components_products' %}" class="btn btn-products-filter">Components</a>
-			</div>
-			<div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
-				<a href="{% url 'nutrition_products' %}" class="btn btn-products-filter">Nutrition</a>
-			</div>
-			<div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
-				<a href="{% url 'workshop_products' %}" class="btn btn-products-filter">Workshop</a>
-			</div>
-			<div class="col-12 col-sm-2 d-flex justify-content-center no-padding">
-				<a href="{% url 'clearance_products' %}" class="btn btn-products-filter">Clearance</a>
-			</div>
-		</div>
-	</div>
-
-  
-
-{% if messages %}
-    <div class="alert alert-success">
-        <div class="messages">
-            {% for message in messages %} {{ message }} {% endfor %}
-        </div>
-    </div>
-    {% endif %}
-    <div class="container">
-        <div class="display">
-            <form action="{% url 'search' %}" method="get">
-                <input type="text" name="q">
-                <button type="submit">Search</button>
-            </form>
-        </div>
+		            <div class="products-filters row">
+			            <div class="col-6 offset-sm-1 col-sm-2 d-flex justify-content-center no-padding">
+				            <a href="{% url 'assessory_products' %}" class="btn btn-products-filter">Accessories</a>
+			            </div>
+			            <div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
+				        <a href="{% url 'components_products' %}" class="btn btn-products-filter">Components</a>
+			            </div>
+			            <div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
+				            <a href="{% url 'nutrition_products' %}" class="btn btn-products-filter">Nutrition</a>
+			            </div>
+			            <div class="col-6 col-sm-2 d-flex justify-content-center no-padding">
+				            <a href="{% url 'workshop_products' %}" class="btn btn-products-filter">Workshop</a>
+			            </div>
+			            <div class="col-12 col-sm-2 d-flex justify-content-center no-padding">
+				            <a href="{% url 'clearance_products' %}" class="btn btn-products-filter">Clearance</a>
+			            </div>
+		            </div>
+	            </div>
+                <div class="d-flex justify-content-center">
+                    <div class="display ">
+                        <form action="{% url 'search' %}" method="get">
+                            <input type="text" name="q">
+                            <button type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
         {% block content %} {% endblock %}
    
     
