--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -1,7 +1,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<div class="card text-center image-size" >
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <!-- <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div> -->
+            <img src="{{ MEDIA_URL }}{{ product.image }}" class="card-img" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">{{ product.name }}</h5>
+                <p class="card-text">{{ product.description }}</p>
+                <p class="card-text">{{ product.price }} <i class="fas fa-euro-sign"></i></p>
+            </div>
+            <form method="post" action="{% url 'add_to_cart' product.id %}">
+                {% csrf_token %}
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity"required>
+                    <br>
+                        <span class="input-group-btn">
+                            <button class="btn btn-success" type="submit">Add to Cart</button>
+                        </span>
+                </div>
+            </form>
+            <br>
+            <form>
+             <input class="btn btn-primary" style="margin-bottom: 10px;" type="button" value="Back to Products Page" onclick="history.back()">
+            </form>
+          
+        </div>
+    </div>
+</div>
    
 
 {% endblock %}
