--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -4,15 +4,15 @@
 <div class="row row-flex">
     {% for product in products %}
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
-                <a href="{% url 'product_detail' product.id %}"><h3>{{ product.name }}</h3></a>
+            <div class="panel-body ">
+                <a href="{% url 'product_detail' product.id %}"><div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div></a>
+                <a href="{% url 'product_detail' product.id %}"><h3 class="card-title">{{ product.name }}</h3></a>
                 <!-- <p class="product-description">{{ product.description }}</p> -->
-                <p>{{ product.price }}</p>
+                <p class="card-text">{{ product.price }}</p>
                 <form method="post" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                     <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity"required>
                         <span class="input-group-btn">
                             <button class="btn btn-success" type="submit">Quick Buy</button>
                         </span>
