styling on product details

--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -2,92 +2,96 @@
 
 {% block content %}
 
+<hr>
 <div class="container-fluid">
-    <div class="content-wrapper">	
-		<div class="item-container">	
-			<div class="container">	
-				<div class="col-md-12">
-					<div class="product col-md-3 service-image-left">
-                    
-						<center>
-							<img id="item-display" src="" alt=""></img>
-						</center>
-					</div>
-					
-					<div class="container service1-items col-sm-2 col-md-2 pull-left">
-						<center>
-							<a id="item-1" class="service1-item">
-								<img src="" alt=""></img>
-							</a>
-							<a id="item-2" class="service1-item">
-								<img src="" alt=""></img>
-							</a>
-							<a id="item-3" class="service1-item">
-								<img src="" alt=""></img>
-							</a>
-						</center>
-					</div>
-				</div>
-					
-				<div class="col-md-7">
-					<div class="product-title">{{ product.name }}</div>
-					<div class="product-desc">Nedd somthing in here </div>
-					<hr>
-					<div class="product-price">€ {{ product.price }}</div>
-					<div class="product-stock">In Stock</div>
-					<hr>
-
-
-					<div class="btn-group cart">
-                        <form method="post" action="{% url 'add_to_cart' product.id %}">
-                            {% csrf_token %}
-                            <div class="input-group">
-                                <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity"required>
-                                <br>
-                                <span class="input-group-btn">
-                                    <button class="btn btn-success" type="submit">Add to Cart</button>
-                                </span>
+    <div class="content-wrapper">
+        <div class="item-container">
+            <div class="container">
+                <div class="col-md-12">
+                    <div class="bs-example">
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                            <!-- Carousel indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#myCarousel" data-slide-to="1"></li>
+                                <li data-target="#myCarousel" data-slide-to="2"></li>
+                            </ol>
+                            <!-- Wrapper for carousel items -->
+                            <div class="carousel-inner">
+                                <div class="carousel-item active" >
+                                    <img src='{{ MEDIA_URL }}{{ product.image }}' alt="First Slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src='{{ MEDIA_URL }}{{ product.image2 }}' alt="Second Slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src='{{ MEDIA_URL }}{{ product.image3 }}' alt="Third Slide">
+                                </div>
                             </div>
-                        </form>
-					</div>
-
-                    
-
-				</div>
-			</div> 
-		</div>
-		<div class="container-fluid">		
-			<div class="col-md-12 product-info">
-					<ul id="myTab" class="nav nav-tabs nav_tabs">
-						<li class="active"><a href="#service-one" data-toggle="tab">DESCRIPTION</a></li>
-						<li><a href="#service-two" data-toggle="tab">PRODUCT INFO</a></li>
-				</ul>
-				<div id="myTabContent" class="tab-content">
-						<div class="tab-pane fade in active" id="service-one">
-						 
-							<section class="container product-info">
-								<h3>{{ product.name }} </h3>
-                                {{ product.description }}
-
-							</section>
-										  
-						</div>
-					<div class="tab-pane fade" id="service-two">
-						
-						<section class="container">
-                        <h3>{{ product.name }} </h3>
-                        {{ product.description }}
-								
-						</section>
-						
-					</div>
-				</div>
-				<hr>
-			</div>
-		</div>
-	</div>
+                            <!-- Carousel controls -->
+                            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </a>
+                            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="product-title">
+                            <h3>{{ product.name }} </h3></div>
+                        <div class="product-desc"> {{ product.brief_description }} </div>
+                        <hr>
+                        <div class="product-price">€ {{ product.price }}</div>
+                        <div class="product-stock">In Stock</div>
+                        <hr>
+                        <div class="btn-group cart">
+                            <form method="post" action="{% url 'add_to_cart' product.id %}">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity" required>
+                                    <br>
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-success" type="submit">Add to Cart</button>
+                                    </span>
+                                </div>
+                            </form>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="col-md-12 product-info">
+                        <ul id="myTab" class="nav nav-tabs nav_tabs">
+                            <li class="active"><a href="#service-one" data-toggle="tab">DESCRIPTION</a></li>
+                            <li><a href="#service-two" data-toggle="tab">PRODUCT INFO</a></li>
+                        </ul>
+                        <div id="myTabContent" class="tab-content">
+                            <div class="tab-pane fade in active" id="service-one">
+                                <section class="container product-info">
+                                    <h3>{{ product.name }} </h3> {{ product.brief_description}}
+                                </section>
+                            </div>
+                            <div class="tab-pane fade" id="service-two">
+                                <section class="container">
+                                    <h3>{{ product.name }} </h3> {{ product.full_description }}
+                                </section>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-   
+ <script>
+$(document).ready(function(){
+    $("#myCarousel").carousel({
+        interval : false
+    });
+});
+</script>  
 
 {% endblock %}
