updating image files

--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -69,12 +69,12 @@
                         <div id="myTabContent" class="tab-content">
                             <div class="tab-pane fade in active" id="service-one">
                                 <section class="container product-info">
-                                    <h3>{{ product.name }} </h3> {{ product.brief_description}}
+                                    <h3> </h3> {{ product.description}}
                                 </section>
                             </div>
                             <div class="tab-pane fade" id="service-two">
                                 <section class="container">
-                                    <h3>{{ product.name }} </h3> {{ product.full_description }}
+                                    <h3> </h3> {{ product.full_description }}
                                 </section>
                             </div>
                         </div>
