--- a/templates/base.html
+++ b/templates/base.html
@@ -37,49 +37,28 @@
                     <a href="#AccessoriesSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Accessories</a>
                     <ul class="collapse list-unstyled" id="AccessoriesSubmenu">
                         <li>
-                            <a href="#">All Accessories</a>
+                            <a href="{% url 'assessory_products' %}">All Accessories</a>
                         </li>
                         <li>
-                            <a href="#">Electronics</a>
+                            <a href="{% url 'electronics_products' %}">Electronics</a>
                         </li>
                         <li>
-                            <a href="#">Bottles And Cages</a>
+                            <a href="{% url 'bottles_products' %}">Bottles</a>
                         </li>
                         <li>
-                            <a href="#">Car Racks</a>
+                            <a href="{% url 'seat_products' %}">Child Seats & Trailers</a>
                         </li>
                         <li>
-                            <a href="#">Child Seats & Trailers</a>
+                            <a href="{% url 'carrier_products' %}">Carriers & Baskets</a>
                         </li>
                         <li>
-                            <a href="#">Carriers & Baskets</a>
+                            <a href="{% url 'helmet_products' %}">Helmets</a>
                         </li>
                         <li>
-                            <a href="#">Cameras</a>
+                            <a href="{% url 'lights_products' %}">Lights</a>
                         </li>
                         <li>
-                            <a href="#">Computers GPS & Watches</a>
-                        </li>
-                        <li>
-                            <a href="#">Computers Accessories</a>
-                        </li>
-                        <li>
-                            <a href="#">Helmets</a>
-                        </li>
-                        <li>
-                            <a href="#">Eyewear</a>
-                        </li>
-                        <li>
-                            <a href="#">Lights</a>
-                        </li>
-                        <li>
-                            <a href="#">Locks</a>
-                        </li>
-                        <li>
-                            <a href="#">Mudguards</a>
-                        </li>
-                        <li>
-                            <a href="#">Multi Tools</a>
+                            <a href="{% url 'locks_products' %}">Locks</a>
                         </li>
                     </ul>
                 </li>
