--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -5,30 +5,28 @@
 {% block content %}
 <div class="row row-flex">
     {% for item in cart_items %}
-    
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
-        
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-        
-        <div class="caption">
-            <h3>{{ item.product.name }}</h3>
-            <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
-            <p>
-                
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+    <div class="col-lg-4 col-md-6 mb-4">
+        <div class=" card h-100">
+            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>     
+            <div class="card-body">
+                <h4 class="card-title text-center">{{ item.product.name }}</h4>
+                <h5 class= "text-center">€{{ item.product.price }}</h5>
+                <div class= "d-flex justify-content-center">
+                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputAmount" class="sr-only">New Qty</label>
                         <div class="input-group">
-                            <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control">
+                        <div class="input-group-addon">Qty</div>
+                            <input name="quantity" type="number" min="0" max="999"  class="form-control" required>
                             <div class="input-group-addon">{{item.quantity}}</div>
+                            <div class="input-group-btn ">
+                                <button class="btn btn-primary  glyphicon glyphicon-editX" aria-hidden="true" type="submit">UPDATE</button>
+                            </div>
                         </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                </form>
-            </p>
+                    </form>
+                </div>
+            </div>
+            <div class="card-footer">
+            </div>
         </div>
     </div>
     {% endfor %}
