--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -15,18 +15,21 @@
 {% block content %}
 <div class="row row-flex">
     {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-                <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-
-                <div class="caption">
-                    <h3>{{ item.product.name }}</h3>
-                    <p class="product-description">{{ item.product.descriptio }}</p>
-                    <p>{{ item.quantity }}</p>
-                    <p>item.product.price</p>
-                </div>
+    <div class="col-lg-4 col-md-6 mb-4">
+        <div class=" card h-100">
+            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>     
+            <div class="card-body">
+                <h4 class="card-title text-center">{{ item.product.name }}</h4>
+                <h5 class= "text-center">Unit Price €{{ item.product.price }}</h5>
+                <h5 class= "text-center">Quantity {{item.quantity}}</h5>
+            </div>
+            <div class="card-footer">
             </div>
         </div>
+    </div>
+
+
+        
     {% endfor %}
 </div>
 <div class="row">
