--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -8,8 +8,8 @@
     <div class="content-wrapper">
         <div class="item-container">
             <div class="container">
-                <div class="col-12 col-md-12">
-                    <div class=" col-md-6">
+                <div class=" col-md-12">
+                    <div class="  col-md-6">
                         <div id="myCarousel" class="carousel slide" data-ride="carousel">
                             <!-- Carousel indicators -->
                             <ol class="carousel-indicators">
@@ -20,7 +20,7 @@
                             <!-- Wrapper for carousel items -->
                             <div class="carousel-inner h-100">
                                 <div class="carousel-item active" >
-                                <img srcset="{{ MEDIA_URL }}{{ product.image }}" alt="First Slide" class="d-block img-fluid">
+                                <img srcset="{{ MEDIA_URL }}{{ product.image1 }}" alt="First Slide" class="d-block img-fluid">
                                 </div>
                                 <div class="carousel-item">
                                 <img srcset="{{ MEDIA_URL }}{{ product.image2 }}" alt="Second Slide" class="d-block img-fluid">
@@ -38,10 +38,10 @@
                             </a>
                         </div>
                     </div>
-                    <div class=" col-md-6">
+                    <div class="  col-md-6">
                         <div class="product-title">
                             <h3>{{ product.name }} </h3></div>
-                        <div class="product-desc"> {{ product.brief_description }} </div>
+                        <div class="product-desc"> {{ product.product_summary }} </div>
                         <hr>
                         <div class="product-price">€ {{ product.price }}</div>
                         <!-- <div class="product-stock">In Stock</div> -->
@@ -70,12 +70,12 @@
                         <div id="myTabContent" class="tab-content">
                             <div class="tab-pane fade in active" id="service-one">
                                 <section class="container product-info">
-                                    <h3> </h3> {{ product.description}}
+                                    <h3> </h3> {{ product.product_description}}
                                 </section>
                             </div>
                             <div class="tab-pane fade" id="service-two">
                                 <section class="container">
-                                    <h3> </h3> {{ product.full_description }}
+                                    <h3> </h3> {{ product.product_features }}
                                 </section>
                             </div>
                         </div>
