--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -489,5 +489,13 @@ a.article, a.article:hover {
 
 
 
+.search-test {
+    margin-top: 10px !important;
+}
 
 
+.div1 {
+  width: 300px;
+  height: 100px;
+  border: 1px solid blue;
+}
