--- a/templates/base.html
+++ b/templates/base.html
@@ -136,19 +136,7 @@
         <div id="content">
 
             <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <div id="navbar-icons-mobile" class="d-lg-none">
-                        <a class="nav-link nav-link-icon" href="{% url 'view_cart' %}" title="Shopping cart">
-                            <div>
-                                <i class="fas fa-shopping-basket navbar-icon"></i>
-                                {% if product_count and product_count != 0 %}
-                                <div id="cart-counter">{% if product_count > 9 %}9+
-                                {% else %}{{ product_count }}{% endif %}</div>
-                                {% endif %}
-                            </div>
-                        </a>
-                    </div>
-
+                <div class="container-fluid">             
                     <button type="button" id="sidebarCollapse" class="navbar-btn">
                         <span></span>
                         <span></span>
@@ -162,15 +150,16 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a></li>
-                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                        <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
+                        <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
                     {%  else %}
-                        <li><a href="{% url 'register' %}"><i class="fa fa-user-plus"></i> Register</a></li>
-                        <li><a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Log In</a></li>
+                        <li><a href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
+                        <li><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Log In</a></li>
                     {% endif %}
+            
                     <li>
                         <a href="{% url 'view_cart' %}">
-                            <i class="fa fa-shipping-cart"></i> Cart
+                            <i class="fas fa-shopping-basket navbar-icon"></i> Cart
                             {% if product_count > 0 %}
                             <label class="badge badge-warning">{{ product_count }}</label>
                             {% endif %}
@@ -207,14 +196,15 @@
 			            </div>
 		            </div>
 	            </div>
-                <div class="d-flex justify-content-center">
-                    <div class="display ">
+                <div  class=" search-test d-flex justify-content-center  no-padding">
+                    <div class=" ">
                         <form action="{% url 'search' %}" method="get">
                             <input type="text" name="q">
                             <button type="submit">Search</button>
                         </form>
                     </div>
                 </div>
+                <div class="div1">This div is smaller (width is 300px and height is 100px).</div>
         {% block content %} {% endblock %}
    
     
