--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container-fluid">
+    <div class="content-wrapper">
+        <div class="item-container">
+            <div class="container">
 
 <div class="row row-flex">
 
@@ -51,5 +55,9 @@
 	</div>
 	{% endif %}
 </div>
+            </div>
+        </div>
+        </div>
+        </div>
 
 {% endblock %}
