--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
    <body>
       <!-- <div class="wrapper">
          </div> -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top top-navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top top-navbar">
          <div class="container">
-           <a class="navbar-brand" href="#">
+           <a class="navbar-brand" href="/">
                 <img src="http://placehold.it/50x20?text=Logo" width="30" height="30" class="d-inline-block align-center" alt="">
                 CycleOlogy
             </a>
@@ -53,19 +53,21 @@
                </li>
             </ul>
          </div>
-      </nav>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        </nav>
+
+        
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
                      <div class="container">
            <a class="navbar-brand" href="#">
-                <img src="http://placehold.it/50x20?text=Logo" width="30" height="30" class="d-inline-block align-center" alt="">
-                CycleOlogy
+                <img src="" width="30" height="30" class="d-inline-block align-center" alt="">
+                
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarbottom" aria-controls="navbarbottom" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarbottom">
-                     <ul class="nav navbar-nav navbar-right ">
-                 <li class="active">
+                     <ul class="nav navbar-nav .navbar-text">
+                 <li class="nav-item active">
                     <a href="#AccessoriesSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Accessories</a>
                     <ul class="collapse list-unstyled" id="AccessoriesSubmenu">
                         <li>
@@ -91,7 +93,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="active">
+                <li class="">
                     <a href="#ComponentsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Components</a>
                     <ul class="collapse list-unstyled" id="ComponentsSubmenu">
                         <li>
@@ -117,7 +119,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="active">
+                <li class="">
                     <a href="#nutritionSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Nutrition</a>
                     <ul class="collapse list-unstyled" id="nutritionSubmenu">
                         <li>
@@ -131,7 +133,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="active">
+                <li class="">
                     <a href="#workshopSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Workshop</a>
                     <ul class="collapse list-unstyled" id="workshopSubmenu">
                         <li>
@@ -149,12 +151,23 @@
                     </ul>
                 </li>
                 <li class="active">
-                    <a href="#workshopSubmenu" data-toggle="collapse" aria-expanded="false" >Clearance</a>
+                    <a href="#clearanceSubmenu"  aria-expanded="false" >Clearance</a>
+                </li>
+                 <li class="active">
+                    <div  class=" search-test d-flex   no-padding">
+                        <form action="{% url 'search' %}" method="get">
+                            <input type="text" name="q">
+                            <button type="submit">Search</button>
+                        </form>
+                    </div>
                 </li>
             </ul>
+            
+
+
             </div>
-      </nav>
-      <hr>
+        </nav>
+   
                   <div class="container">
             {% if messages %}
                 <div class="alert alert-success">
@@ -163,6 +176,9 @@
                     </div>
                     </div>
             {% endif %}
+
+
+           
 
 
 
@@ -191,12 +207,12 @@
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script type="text/javascript">
-         $(document).ready(function() {
-             $('#sidebarCollapse').on('click', function() {
-                 $('#sidebar').toggleClass('active');
-                 $(this).toggleClass('active');
-             });
-         });
-      </script>
+    //      $(document).ready(function() {
+    //          $('#sidebarCollapse').on('click', function() {
+    //              $('#sidebar').toggleClass('active');
+    //              $(this).toggleClass('active');
+    //          });
+    //      });
+    //   </script>
    </body>
 </html>
