styling on checkout page for products

--- a/templates/base.html
+++ b/templates/base.html
@@ -192,7 +192,7 @@
       {% block content %} {% endblock %}
       <footer>
          <div class="container">
-            <p>Made by Code Institute bootcampers</p>
+            <p>Made Blood, Sweat and lots of Tears......</p>
          </div>
       </footer>
       <!-- jQuery CDN - Slim version (=without AJAX) -->
