--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -13,29 +13,52 @@
 {% endblock %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
-    <div class="col-lg-4 col-md-6 mb-4">
-        <div class=" card h-100">
-            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>     
-            <div class="card-body">
-                <h4 class="card-title text-center">{{ item.product.name }}</h4>
-                <h5 class= "text-center">Unit Price €{{ item.product.price }}</h5>
-                <h5 class= "text-center">Quantity {{item.quantity}}</h5>
-            </div>
-            <div class="card-footer">
+
+<div class="container mb-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col"> </th>
+                            <th scope="col">Product</th>
+                            <th scope="col" class="text-center">Quantity</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for item in cart_items %}
+                        <tr>
+                            <td><div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div></td>
+                            <td class="align-middle">{{ item.product.name }}</td>
+                             {% csrf_token %}
+                             <td class="align-middle text-center">{{item.quantity}}</td>
+                         {% endfor %}
+                         <tr>
+                            <td></td>
+                            <td class="text-right"><strong>Total</strong></td>
+                            <td class="text-right"><strong>€{{ total }}</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-    </div>
-
-
-        
-    {% endfor %}
+     </div>
 </div>
+
+
+
+
+
+
+
+
+
+<!-- 
 <div class="row">
     <p>Total</p>
     <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-</div>
+</div> -->
 
 <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
     <legend>Payment Details</legend>
@@ -57,4 +80,6 @@
         <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
     </div>
 </form>
+</div>
+
 {% endblock %}
